; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4xdr.c_encode_readlink.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_nfs4xdr.c_encode_readlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdr_stream = type { i32 }
%struct.nfs4_readlink = type { i32 }
%struct.rpc_rqst = type { i32 }
%struct.compound_hdr = type { i32, i32 }

@OP_READLINK = common dso_local global i32 0, align 4
@decode_readlink_maxsz = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xdr_stream*, %struct.nfs4_readlink*, %struct.rpc_rqst*, %struct.compound_hdr*)* @encode_readlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @encode_readlink(%struct.xdr_stream* %0, %struct.nfs4_readlink* %1, %struct.rpc_rqst* %2, %struct.compound_hdr* %3) #0 {
  %5 = alloca %struct.xdr_stream*, align 8
  %6 = alloca %struct.nfs4_readlink*, align 8
  %7 = alloca %struct.rpc_rqst*, align 8
  %8 = alloca %struct.compound_hdr*, align 8
  %9 = alloca i32*, align 8
  store %struct.xdr_stream* %0, %struct.xdr_stream** %5, align 8
  store %struct.nfs4_readlink* %1, %struct.nfs4_readlink** %6, align 8
  store %struct.rpc_rqst* %2, %struct.rpc_rqst** %7, align 8
  store %struct.compound_hdr* %3, %struct.compound_hdr** %8, align 8
  %10 = load %struct.xdr_stream*, %struct.xdr_stream** %5, align 8
  %11 = call i32* @reserve_space(%struct.xdr_stream* %10, i32 4)
  store i32* %11, i32** %9, align 8
  %12 = load i32, i32* @OP_READLINK, align 4
  %13 = call i32 @cpu_to_be32(i32 %12)
  %14 = load i32*, i32** %9, align 8
  store i32 %13, i32* %14, align 4
  %15 = load %struct.compound_hdr*, %struct.compound_hdr** %8, align 8
  %16 = getelementptr inbounds %struct.compound_hdr, %struct.compound_hdr* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %16, align 4
  %19 = load i64, i64* @decode_readlink_maxsz, align 8
  %20 = load %struct.compound_hdr*, %struct.compound_hdr** %8, align 8
  %21 = getelementptr inbounds %struct.compound_hdr, %struct.compound_hdr* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %23, %19
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %21, align 4
  ret void
}

declare dso_local i32* @reserve_space(%struct.xdr_stream*, i32) #1

declare dso_local i32 @cpu_to_be32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
